Final SEO Check

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Tamsar AI Blog - Update Tren Teknologi & AI Terkini</title>
+    <title>TechVanguard AI - Update Tren Teknologi & AI Terkini</title>
     <meta name="description" content="Portal berita teknologi otomatis yang menyajikan analisis mendalam tentang AI, Gadget, dan Tren Digital Masa Depan setiap hari.">
     <meta name="keywords" content="Teknologi, AI, Kecerdasan Buatan, Tren Digital 2026, Berita Gadget, Tamsar AI">
     <meta name="author" content="Tamsar811">
     <meta name="robots" content="index, follow">
 
-    <meta property="og:title" content="Tamsar AI Blog - Update Tren Teknologi Terkini">
+    <meta property="og:title" content="TechVanguard AI - Update Tren Teknologi Terkini">
     <meta property="og:description" content="Baca analisis teknologi terdalam yang dibuat otomatis oleh AI canggih.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://techvanguard-ai.netlify.app">
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header>
-        <h1>TAMSAR AI BLOG</h1>
+        <h1>TECHVANGUARD AI</h1>
         <p style="text-align:center; font-style:italic;">Wawasan Masa Depan, Ditulis Oleh Kecerdasan Buatan</p>
     </header>
 
@@ -37,7 +37,7 @@
     </main>
 
     <footer>
-        <p>© 2026 <b>Tamsar AI Blog</b> - Semua konten dibuat secara otomatis untuk tujuan edukasi teknologi.</p>
+        <p>© 2026 <b>TechVanguard AI</b> - Semua konten dibuat secara otomatis untuk tujuan edukasi teknologi.</p>
     </footer>
 
     <script>
