Pindah ke GitHub Pages

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="TechVanguard AI - Update Tren Teknologi Terkini">
     <meta property="og:description" content="Baca analisis teknologi terdalam yang dibuat otomatis oleh AI canggih.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://techvanguard-ai.netlify.app">
+    <meta property="og:url" content="https://tamsar811.github.io/blog-ai-otomatis">
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sakura.css/css/sakura.css" type="text/css">
     <style>
