--- a/index.html
+++ b/index.html
@@ -1,66 +1,94 @@
+cat << 'EOF' > ~/blog-otomatis/index.html
 <!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="1c725a095311279a" />
-    <title>TechVanguard AI - Masa Depan Teknologi</title>
+    <title>TechVanguard AI</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Space Grotesk', sans-serif; background-color: #0f172a; color: #f8fafc; }
         .glass { background: rgba(30, 41, 59, 0.7); backdrop-filter: blur(12px); border: 1px solid rgba(255,255,255,0.1); }
         .gradient-text { background: linear-gradient(90deg, #38bdf8, #818cf8); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
-        .card-hover:hover { transform: translateY(-5px); transition: all 0.3s ease; border-color: #38bdf8; }
+        #modal { transition: opacity 0.3s ease; }
     </style>
 </head>
 <body class="min-h-screen">
-    <nav class="glass sticky top-0 z-50 p-4 mb-8">
-        <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold gradient-text">TECHVANGUARD AI</h1>
-            <div class="text-xs text-slate-400 uppercase tracking-widest">Update Otomatis Setiap Hari</div>
+    <nav class="glass sticky top-0 z-40 p-4 mb-8">
+        <div class="container mx-auto">
+            <h1 class="text-xl font-bold gradient-text">TECHVANGUARD AI</h1>
         </div>
     </nav>
 
-    <header class="container mx-auto px-4 mb-12 text-center">
-        <h2 class="text-4xl md:text-6xl font-bold mb-4">Navigasi di Era <span class="gradient-text">Kecerdasan Buatan</span></h2>
-        <p class="text-slate-400 max-w-2xl mx-auto">Wawasan mendalam tentang AI, teknologi masa depan, dan bagaimana dunia berubah dalam genggaman Anda.</p>
-    </header>
-
     <main class="container mx-auto px-4 pb-20">
-        <div id="content" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-            </div>
+        <div id="content" class="grid grid-cols-1 md:grid-cols-2 gap-8">
+            <p class="text-slate-500">Memuat artikel terbaru...</p>
+        </div>
     </main>
 
-    <footer class="border-t border-slate-800 py-8 text-center text-slate-500 text-sm">
-        &copy; 2026 TechVanguard AI. Powered by Gemini & GitHub.
-    </footer>
+    <div id="modal" class="fixed inset-0 bg-black/90 hidden z-50 overflow-y-auto pointer-events-auto">
+        <div class="min-h-screen flex items-center justify-center p-4">
+            <div class="glass max-w-3xl w-full p-8 rounded-3xl relative">
+                <button onclick="closeModal()" class="absolute top-4 right-4 text-3xl text-slate-400 hover:text-white">&times;</button>
+                <div id="modal-body"></div>
+            </div>
+        </div>
+    </div>
 
     <script>
-        async function loadContent() {
+        let allPosts = [];
+
+        async function init() {
             try {
-                const response = await fetch('https://raw.githubusercontent.com/tamsar811/blog-ai-otomatis/main/data.json');
-                const data = await response.json();
-                const contentDiv = document.getElementById('content');
-                
-                data.reverse().forEach(post => {
-                    const card = `
-                        <article class="glass p-6 rounded-2xl card-hover flex flex-col justify-between">
-                            <div>
-                                <div class="text-xs text-sky-400 mb-2">${post.date}</div>
-                                <h3 class="text-xl font-bold mb-3 leading-tight">${post.title}</h3>
-                                <p class="text-slate-400 text-sm line-clamp-3 mb-4">${post.content.substring(0, 150)}...</p>
-                            </div>
-                            <button class="w-full py-2 rounded-xl bg-slate-800 hover:bg-sky-600 transition-colors font-medium">Baca Selengkapnya</button>
-                        </article>
-                    `;
-                    contentDiv.innerHTML += card;
-                });
-            } catch (error) {
-                console.error('Gagal memuat konten:', error);
+                // Tambahkan random parameter supaya tidak terkena cache browser
+                const res = await fetch('data.json?v=' + Math.random());
+                allPosts = await res.json();
+                render();
+            } catch (e) {
+                document.getElementById('content').innerHTML = "Gagal memuat konten.";
             }
         }
-        loadContent();
+
+        function render() {
+            const container = document.getElementById('content');
+            container.innerHTML = '';
+            // Urutan dari yang terbaru (reverse)
+            [...allPosts].reverse().forEach((post, index) => {
+                // Cari index asli karena kita pakai reverse
+                const originalIndex = allPosts.length - 1 - index;
+                container.innerHTML += `
+                    <div class="glass p-6 rounded-2xl flex flex-col justify-between">
+                        <div>
+                            <span class="text-xs text-sky-400 font-bold uppercase tracking-widest">${post.date}</span>
+                            <h2 class="text-2xl font-bold my-3 leading-tight">${post.title}</h2>
+                            <p class="text-slate-400 text-sm line-clamp-3 mb-6">${post.content}</p>
+                        </div>
+                        <button onclick="openModal(${originalIndex})" class="w-full py-3 rounded-xl bg-sky-600 hover:bg-sky-500 transition shadow-lg shadow-sky-900/20 font-bold">
+                            Baca Selengkapnya
+                        </button>
+                    </div>
+                `;
+            });
+        }
+
+        window.openModal = function(idx) {
+            const post = allPosts[idx];
+            document.getElementById('modal-body').innerHTML = `
+                <span class="text-sky-400 text-sm">${post.date}</span>
+                <h2 class="text-3xl font-bold mt-2 mb-6 gradient-text">${post.title}</h2>
+                <div class="text-slate-300 leading-relaxed text-lg whitespace-pre-wrap">${post.content}</div>
+            `;
+            document.getElementById('modal').classList.remove('hidden');
+            document.body.style.overflow = 'hidden'; // Kunci scroll layar utama
+        }
+
+        window.closeModal = function() {
+            document.getElementById('modal').classList.add('hidden');
+            document.body.style.overflow = 'auto'; // Aktifkan kembali scroll
+        }
+
+        init();
     </script>
 </body>
 </html>
