Posting Pagi: Viral

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+cat << 'EOF' > ~/blog-otomatis/index.html
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -10,6 +11,8 @@
         body { font-family: 'Space Grotesk', sans-serif; background-color: #0f172a; color: #f8fafc; }
         .glass { background: rgba(30, 41, 59, 0.7); backdrop-filter: blur(12px); border: 1px solid rgba(255,255,255,0.1); }
         .gradient-text { background: linear-gradient(90deg, #38bdf8, #818cf8); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+        ::-webkit-scrollbar { width: 5px; }
+        ::-webkit-scrollbar-thumb { background: #334155; border-radius: 10px; }
     </style>
 </head>
 <body class="min-h-screen">
@@ -23,10 +26,12 @@
         <div id="content" class="grid grid-cols-1 md:grid-cols-2 gap-8"></div>
     </main>
 
-    <div id="modal" class="fixed inset-0 bg-black/90 hidden z-50 overflow-y-auto p-4 flex items-center justify-center">
-        <div class="glass max-w-3xl w-full p-8 rounded-3xl relative">
-            <button onclick="closeModal()" class="absolute top-4 right-4 text-3xl text-slate-400 hover:text-white">&times;</button>
-            <div id="modal-body"></div>
+    <div id="modal" class="fixed inset-0 bg-black/95 hidden z-50 overflow-y-auto p-4">
+        <div class="flex items-center justify-center min-h-screen">
+            <div class="glass max-w-3xl w-full p-8 pt-16 rounded-3xl relative shadow-2xl">
+                <button onclick="closeModal()" class="fixed top-6 right-6 md:absolute md:top-4 md:right-4 text-3xl text-slate-400 hover:text-white bg-slate-800/50 w-12 h-12 rounded-full z-[60]">&times;</button>
+                <div id="modal-body"></div>
+            </div>
         </div>
     </div>
 
@@ -40,20 +45,20 @@
             [...allPosts].reverse().forEach((post, index) => {
                 const realIdx = allPosts.length - 1 - index;
                 container.innerHTML += `
-                    <div class="glass p-6 rounded-2xl">
+                    <div class="glass p-6 rounded-2xl flex flex-col h-full">
                         <img src="${post.image}" class="w-full h-48 object-cover rounded-xl mb-4 shadow-lg">
-                        <span class="text-xs text-sky-400 font-bold uppercase">${post.tag} | ${post.date}</span>
-                        <h2 class="text-2xl font-bold my-3">${post.title}</h2>
-                        <button onclick="openModal(${realIdx})" class="w-full py-3 rounded-xl bg-sky-600 font-bold hover:bg-sky-500">Baca Selengkapnya</button>
+                        <span class="text-xs text-sky-400 font-bold uppercase tracking-widest">${post.tag} | ${post.date}</span>
+                        <h2 class="text-2xl font-bold my-3 flex-grow">${post.title}</h2>
+                        <button onclick="openModal(${realIdx})" class="w-full py-3 rounded-xl bg-sky-600 font-bold hover:bg-sky-500 transition-all">Baca Selengkapnya</button>
                     </div>`;
             });
         }
         function openModal(idx) {
             const post = allPosts[idx];
             document.getElementById('modal-body').innerHTML = `
-                <img src="${post.image}" class="w-full h-64 object-cover rounded-2xl mb-6 shadow-2xl">
-                <h2 class="text-3xl font-bold mb-4 gradient-text">${post.title}</h2>
-                <div class="text-slate-300 leading-relaxed whitespace-pre-wrap">${post.content}</div>
+                <img src="${post.image}" class="w-full h-64 md:h-80 object-cover rounded-2xl mb-6 shadow-2xl">
+                <h2 class="text-3xl font-bold mb-6 gradient-text leading-tight">${post.title}</h2>
+                <div class="text-slate-200 leading-relaxed whitespace-pre-wrap text-lg">${post.content}</div>
             `;
             document.getElementById('modal').classList.remove('hidden');
             document.body.style.overflow = 'hidden';
@@ -66,4 +71,5 @@
     </script>
 </body>
 </html>
-
+EOF
+git add index.html && git commit -m "Fix modal layout and text visibility" && git push
